[package]
name = "beefi_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
pcap = "2.2"
polars = { version = "0.42", features = ["parquet"], optional = true }
thiserror = "1.0.63"
bilge = "0.2.0"
crossbeam-channel = "0.5.13"
log = "0.4.22"

[features]
# This feature introduces some metadata in the extracted data
default = ["bfi_metadata", "parquet"]
bfi_metadata = []
parquet = ["dep:polars"]
